[gd_scene load_steps=14 format=2]

[ext_resource path="res://Arwing/Arwing.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Sounds/Bomb.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/arwing single laser one shot.wav" type="AudioStream" id=3]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://player.gd" type="Script" id=5]
[ext_resource path="res://Sounds/spin.wav" type="AudioStream" id=6]
[ext_resource path="res://UI/crosshair1.png" type="Texture" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.642854, 1, 1 )

[sub_resource type="Shader" id=2]

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=5]
next_pass = SubResource( 3 )
shader = SubResource( 4 )

[sub_resource type="SphereMesh" id=6]
radius = 0.25
height = 0.25

[node name="player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 5 )

[node name="PlayerMesh" type="MeshInstance" parent="."]
transform = Transform( -1, 0, 0.000453862, 0, 1, 0, -0.000453862, 0, -1, 0, 0, 0 )
mesh = ExtResource( 1 )

[node name="Area" type="Area" parent="." groups=["Player"]]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2.31353, 0, 0, 0, 0.622312, 0, 0, 0, 0.703544, 0, 0.295968, -0.953527 )
shape = SubResource( 1 )

[node name="Gun2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.993349, 0.308664, -8.40549 )

[node name="Gun3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02454, 0.308664, -8.43958 )

[node name="Crosshair1" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0133629, -0.0590067, -22.2078 )
modulate = Color( 0.443137, 1, 0.411765, 1 )
pixel_size = 0.0225
texture = ExtResource( 7 )

[node name="Crosshair2" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -53.0486 )
modulate = Color( 0.486275, 1, 0.411765, 1 )
pixel_size = 0.0225
texture = ExtResource( 7 )

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Spin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1.61952, 0, 0, 0, 1.8359, 0, 0, 0, 1, 0, 0.424661, 0.594109 )
amount = 20
lifetime = 0.44
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.992069, -0.125697, 0, 0.125697, 0.992069, -0.00694805, 0.260763, 2.8721 )
light_color = Color( 0.866667, 0.352941, 0.352941, 1 )
light_energy = 200.0
spot_range = 2.45895
spot_angle = 12.1091

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[node name="Bomb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
